RESOLVED FIXED75834
Subtree invalidation on stylesheet change
https://bugs.webkit.org/show_bug.cgi?id=75834
Summary Subtree invalidation on stylesheet change
Antti Koivisto
Reported 2012-01-09 00:56:03 PST
Currently if we add a stylesheet with scoped selectors and matching scope element exist, we recalculate the entire document style. It is sufficient to invalidate the subtrees matching the scope only.
Attachments
patch (7.54 KB, patch)
2012-01-09 01:12 PST, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2012-01-09 01:12:31 PST
Andreas Kling
Comment 2 2012-01-09 01:19:52 PST
Comment on attachment 121629 [details] patch Very cool, r=me
Antti Koivisto
Comment 3 2012-01-09 02:01:15 PST
Ryosuke Niwa
Comment 4 2012-01-10 00:13:33 PST
Nice!
Note You need to log in before you can comment on or make changes to this bug.